---------------------------------------------------------------------------
Version 5.3.1  [DEVEL] (rgerhards), 2009-09-??
---------------------------------------------------------------------------
Version 5.3.0  [DEVEL] (rgerhards), 2009-09-14
- begun to add simple GUI programs to gain insight into running rsyslogd
  instances and help setup and troubleshooting (active via the
  --enable-gui ./configure switch)
- changed imudp to utilize epoll(), where available. This shall provide
  slightly better performance (just slightly because we called select()
  rather infrequently on a busy system)
- added new config option $ActionWriteAllMarkMessages
  this option permites to process mark messages under all circumstances,
  even if an action was recently called. This can be useful to use mark
  messages as a kind of heartbeat.
- added new config option $InputUnixListenSocketCreatePath
  to permit the auto-creation of pathes to additional log sockets. This
  turns out to be useful if they reside on temporary file systems and
  rsyslogd starts up before the daemons that create these sockets
  (rsyslogd always creates the socket itself if it does not exist).
- added $LogRSyslogStatusMessages configuration directive
  permitting to turn off rsyslog start/stop/HUP messages. See Debian
  ticket http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=463793
- bugfix: hostnames with dashes in them were incorrectly treated as
  malformed, thus causing them to be treated as TAG (this was a regression
  introduced from the "rfc3164 strict" change in 4.5.0). Testbench has been
  updated to include a smaple message with a hostname containing a dash.
- bugfix: strings improperly reused, resulting in some message properties
  be populated with strings from previous messages. This was caused by
  an improper predicate check.
- added new config directive $omfileForceChown [import from 4.7.0]
---------------------------------------------------------------------------