@@ -17,6 +17,8 @@ appear as implementation progresses.
 many parameter settings modify queue parameters. If in doubt, use the
 default, it is usually well-chosen and applicable in most cases.</p>
 <ul>
+<li><a href="rsconf1_abortonuncleanconfig.html">$AbortOnUncleanConfig</a> - abort startup if there is
+any issue with the config file</li>
 <li><a href="rsconf1_actionexeconlywhenpreviousissuspended.html">$ActionExecOnlyWhenPreviousIsSuspended</a></li>
 <li>$ActionName &lt;a_single_word&gt; - used primarily for documentation, e.g. when
 generating a configuration graph. Available sice 4.3.1.
